--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "socket.io-client": "~4.7.5",
     "ts-node-dev": "~2.0.0",
     "jest": "~29.7.0",
-    "@trpc/client": "~10.45.2",
-    "@trpc/server": "~10.45.2",
+    "@trpc/client": "next",
+    "@trpc/server": "next",
     "mongoose": "~8.5.1",
     "supertest": "~7.0.0",
     "rune-backend-sdk": "^1.0.6",
