--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@ethersproject/solidity": "^5"
   },
   "devDependencies": {
-    "@arken/evolution-protocol": "workspace:*",
     "@arken/node": "workspace:*",
+    "@arken/seer-protocol": "workspace:*",
     "@ethersproject/address": "^5",
     "@ethersproject/contracts": "^5",
     "@ethersproject/networks": "^5",
