--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arken/evolution-protocol",
-  "version": "0.5.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "Protocol for Arken: Evolution Isles",
   "scripts": {
     "build": "NODE_ENV=production tsc && tsc-alias",
     "test": "jest"
@@ -66,7 +66,6 @@
     "moment": "^2",
     "morgan": "^1",
     "nodemon": "^2",
-    "rune-backend-sdk": "^1",
     "semver": "^7",
     "shortid": "^2",
     "socket.io": "^4",
