--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@ethersproject/networks": "^5",
     "@ethersproject/providers": "^5",
     "@ethersproject/solidity": "^5",
-    "@trpc/client": "next",
-    "@trpc/server": "next",
+    "@trpc/client": "11.0.0-rc.660",
+    "@trpc/server": "11.0.0-rc.660",
     "@truffle/hdwallet-provider": "^1",
     "@typechain/ethers-v4": "^1",
     "@types/common-tags": "^1",
