--- a/package.json
+++ b/package.json
@@ -1,83 +1,73 @@
 {
   "name": "@arken/evolution-protocol",
-  "version": "2.0.0",
+  "version": "2.0.14",
   "description": "Protocol for Arken: Evolution Isles",
   "scripts": {
-    "build": "NODE_ENV=production tsc && tsc-alias",
-    "test": "jest"
+    "build": "npm-run-all dist",
+    "clean": "del-cli ./build && make-dir ./build",
+    "dist": "npm-run-all clean tsc:*",
+    "publish": "npm publish --access=public",
+    "tsc:1": "rm -rf ./build && mkdir ./build && cp package.json ./build && NODE_ENV=production NODE_OPTIONS=--max-old-space-size=8192 tsc"
   },
+  "main": "build/index.js",
+  "types": "build/types.d.ts",
+  "exports": {
+    ".": {
+      "types": "./build/index.d.ts",
+      "import": "./build/index.js",
+      "require": "./build/index.js",
+      "default": "./build/index.js"
+    },
+    "./shard/shard.router": {
+      "types": "./build/shard/shard.router.d.ts",
+      "import": "./build/shard/shard.router.js",
+      "require": "./build/shard/shard.router.js",
+      "default": "./build/shard/shard.router.js"
+    },
+    "./realm/realm.router": {
+      "types": "./build/realm/realm.router.d.ts",
+      "import": "./build/realm/realm.router.js",
+      "require": "./build/realm/realm.router.js",
+      "default": "./build/realm/realm.router.js"
+    },
+    "./presets": {
+      "types": "./build/presets.d.ts",
+      "default": "./build/presets.js"
+    }
+  },
+  "peerDependencies": {},
   "dependencies": {
+    "@trpc/server": "11.0.0-rc.660",
+    "@trpc/client": "11.0.0-rc.660",
+    "lodash": "^4",
     "dotenv": "^16",
+    "moment": "^2",
+    "mongoose": "^8",
+    "pluralize": "^8",
     "zod": "^3"
   },
-  "peerDependencies": {
-    "@ethersproject/address": "^5",
-    "@ethersproject/contracts": "^5",
-    "@ethersproject/networks": "^5",
-    "@ethersproject/providers": "^5",
-    "@ethersproject/solidity": "^5"
-  },
   "devDependencies": {
-    "@arken/node": "workspace:*",
-    "@arken/seer-protocol": "workspace:*",
-    "@ethersproject/address": "^5",
-    "@ethersproject/contracts": "^5",
-    "@ethersproject/networks": "^5",
-    "@ethersproject/providers": "^5",
-    "@ethersproject/solidity": "^5",
-    "@trpc/client": "11.0.0-rc.660",
-    "@trpc/server": "11.0.0-rc.660",
-    "@truffle/hdwallet-provider": "^1",
-    "@typechain/ethers-v4": "^1",
     "@types/common-tags": "^1",
-    "@types/cors": "^2",
-    "@types/ethereum-protocol": "^1",
-    "@types/express": "^4",
-    "@types/express-rate-limit": "^3",
-    "@types/helmet": "^0",
     "@types/jest": "^29",
-    "@types/morgan": "^1",
+    "@types/lodash": "^4",
+    "@types/mongoose": "^5",
     "@types/node": "^20",
-    "@types/web3": "^1",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
-    "axios": "^1",
-    "body-parser": "^1",
-    "chalk": "^4",
-    "cors": "^2",
-    "dd-trace": "^1",
+    "del-cli": "^5",
     "eslint": "^8",
     "eslint-config-marine": "^3",
     "eslint-config-prettier": "^8",
     "eslint-plugin-prettier": "^3",
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4",
-    "ethereum-protocol": "^1",
-    "ethers": "^5",
-    "express": "^4",
-    "express-rate-limit": "^5",
-    "fast-safe-stringify": "^2",
-    "fs-jetpack": "^4",
-    "git": "^0",
-    "helmet": "^7",
     "jest": "^29",
-    "js-md5": "^0",
+    "jest-environment-jsdom": "^29",
+    "jest-html-reporters": "^2",
+    "jest-junit": "^12",
     "mongoose": "^8",
-    "moment": "^2",
-    "morgan": "^1",
-    "nodemon": "^2",
-    "semver": "^7",
-    "shortid": "^2",
-    "socket.io": "^4",
-    "socket.io-client": "^4",
-    "supertest": "^7",
-    "ts-jest": "^29",
-    "ts-node": "^10",
-    "ts-node-dev": "^2",
-    "tsc-alias": "^1",
-    "tsconfig-paths": "^4",
-    "typescript": "^5",
-    "utf8": "^3",
-    "web3": "^1"
+    "make-dir-cli": "^3",
+    "npm-run-all": "^4",
+    "ts-jest": "^29"
   }
 }
