--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,33 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM"],
+    "module": "CommonJS",
+    "lib": ["ES2022", "DOM"],
     "noImplicitAny": false,
-    "outDir": "build",
     "preserveSymlinks": false,
     "preserveConstEnums": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "removeComments": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "strict": false,
-    "checkJs": true,
-    "sourceMap": true,
-    "target": "ES2020",
+    "checkJs": false,
+    "target": "ES2022",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "types": ["jest", "node"],
     "paths": {},
-    "allowJs": true,
-    "declaration": true,
+    "rootDir": ".",
+    "allowJs": false,
     "isolatedModules": true,
     "noFallthroughCasesInSwitch": true,
-    "noEmit": false,
-    "composite": true
+    "noEmit": true
   },
   "include": [
     "./realm/**/*",
     "./shard/**/*",
+    "./bridge/**/*",
     "./client/**/*",
     "./util/**/*",
     "./config.ts",
