--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "del-cli ./build && make-dir ./build",
     "dist": "npm-run-all clean tsc:*",
     "publish": "npm publish --access=public",
-    "tsc:1": "rm -rf ./build && mkdir ./build && cp package.json ./build && NODE_ENV=production NODE_OPTIONS=--max-old-space-size=8192 tsc"
+    "tsc:1": "rm -rf ./build && mkdir ./build && cp package.json ./build && NODE_ENV=production NODE_OPTIONS=--max-old-space-size=8192 tsc --project tsconfig.build.json"
   },
   "main": "build/index.js",
   "types": "build/types.d.ts",
@@ -30,9 +30,19 @@
       "require": "./build/realm/realm.router.js",
       "default": "./build/realm/realm.router.js"
     },
+    "./bridge/bridge.router": {
+      "types": "./build/bridge/bridge.router.d.ts",
+      "import": "./build/bridge/bridge.router.js",
+      "require": "./build/bridge/bridge.router.js",
+      "default": "./build/bridge/bridge.router.js"
+    },
     "./presets": {
       "types": "./build/presets.d.ts",
       "default": "./build/presets.js"
+    },
+    "./config": {
+      "types": "./build/config.d.ts",
+      "default": "./build/config.js"
     }
   },
   "peerDependencies": {},
